# Firefly

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
shader/: ambient_shader.frag  ambient_shader.vert  blurr_shader.frag  hdr_shader.frag  hdr_shader.vert  light_shader.frag  scene_shader.frag  scene_shader.vert  shader_PBR.frag  shader_ambientocclusion.frag  shader_effect_blurr.frag  shader_effect_threshold.frag  shader_extract.frag  shader_extract.vert  shader_output.frag  shader_render.frag  shader_tonemap.frag  shader_zpass.frag
shader/oldShader/: ambient_shader.frag  output_shader.frag  scene_shader.frag  texture_quad.vert
src/: gl_include.h  glframe.cpp  glframe.h  glm_include.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: component.h  engine.h  entity.h  factory.h  module_shader.h  transformfactory.h
src/data_class/: animation.cpp  animation.h  bindable.h  camera.cpp  camera.h  database.cpp  database.h  framebuffer.h  half_edge.cpp  half_edge.h  instance.h  light.cpp  light.h  loader.cpp  loader.h  material.cpp  material.h  material_element.h  mesh.h  model.cpp  model.h  modulable_shader.h  new_database.h  quadmesh.cpp  quadmesh.h  scene.cpp  scene.h  sceneobject.h  shader.h  texture.h
src/engine/: a_effect.h  a_pipelinenode.cpp  a_pipelinenode.h  blurr_effect.cpp  blurr_effect.h  engine_abstract.h  engine_graphic.cpp  engine_graphic.h  engine_interaction.cpp  engine_interaction.h  hdrnode.h  rendernode.h
src/getters/: add_light.h  get_model.cpp  get_model.h  get_model.ui  getters.h  gui_get_model.cpp  gui_get_model.h
(+197 files in other folders)
